<?xml version="1.0"?>
<package>
  <name>pal_gripper</name>
  <version>0.0.5</version>
  <description>The pal_gripper package</description>

  <author email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</author>
  <maintainer email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>pal_gripper_description</run_depend>
  <run_depend>pal_gripper_controller_configuration</run_depend>

</package>