<?xml version="1.0"?>
<package format="3">
  <name>pal_gripper</name>
  <version>3.1.0</version>
  <description>The pal_gripper package</description>

  <author email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</author>
  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>

  <url type="website">https://github.com/pal-robotics/tiago_simulation</url>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pal_gripper_description</exec_depend>
  <exec_depend>pal_gripper_controller_configuration</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
