<?xml version="1.0"?>
<package format="3">
  <name>pal_gripper_controller_configuration</name>
  <version>1.0.3</version>
  <description>The pal_gripper_controller_configuration package</description>

  <author email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</author>
  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>


  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
