<?xml version="1.0"?>
<package>
  <name>pal_gripper_description</name>
  <version>0.0.2</version>
  <description>The pal_gripper_description package</description>

  <author email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</author>
  <maintainer email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>


</package>