<?xml version="1.0"?>
<package format="3">
  <name>pal_gripper_description</name>
  <version>1.0.3</version>
  <description>The pal_gripper_description package</description>

  <author email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</author>
  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>


  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>xacro</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rosbash</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>urdf_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
