<?xml version="1.0"?>
<package format="3">
  <name>pal_gripper_description</name>
  <version>3.1.0</version>
  <description>The pal_gripper_description package</description>

  <author email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</author>
  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/pal-robotics/tiago_simulation</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>xacro</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>pal_urdf_utils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>urdf_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
